--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -5,6 +5,49 @@
             <label for="name">Name</label>
             <input id="name" name="name" class="form-control" placeholder="Name" />
         </div>
+        <div class="form-check form-group">
+            <input class="form-check-input" type="checkbox" id="emailOffers" name="emailOffers" />
+            <label class="form-check-label" for="emailOffers">
+                Email Special Offers
+            </label>
+        </div>
+
+        <h5>User Interface Style</h5>
+        <div class="form-group">
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="lightInterface" value="light" checked>
+                <label class="form-check-label" for="lightInterface">
+                    Light
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="mediumInterface" value="medium">
+                <label class="form-check-label" for="mediumInterface">
+                    Medium
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="darkInterface" value="dark">
+                <label class="form-check-label" for="mediumInterface">
+                    Dark
+                </label>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <label for="subscriptionType">Subscription Type</label>
+            <select class="form-control" id="subscriptionType">
+                <option>Monthly</option>
+                <option>Annual</option>
+                <option>Lifetime</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <lable for="notes">Notes</lable>
+            <textarea id="notes" name="notes" class="form-control" rows="3"></textarea>
+        </div>
+
         <button class="btn btn-primary">Send</button>
     </form>
 </div>
