--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,9 +1,11 @@
 <div class="container">
     <h2>User Settings</h2>
-    <form>
+
+    <form #form="ngForm">
+
         <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" class="form-control" placeholder="Name" />
+            <input id="name" name="name" class="form-control" ngModule />
         </div>
         <div class="form-check form-group">
             <input class="form-check-input" type="checkbox" id="emailOffers" name="emailOffers" />
