--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -5,10 +5,19 @@
 
         <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" class="form-control" ngModule />
+            <input 
+                id="name" 
+                name="name" 
+                class="form-control" 
+                [(ngModel)]="userSettings.name" />
         </div>
         <div class="form-check form-group">
-            <input class="form-check-input" type="checkbox" id="emailOffers" name="emailOffers" />
+            <input 
+                class="form-check-input" 
+                type="checkbox" 
+                id="emailOffers" 
+                name="emailOffers" 
+                [(ngModel)]="userSettings.emailOffers" />
             <label class="form-check-label" for="emailOffers">
                 Email Special Offers
             </label>
@@ -17,19 +26,38 @@
         <h5>User Interface Style</h5>
         <div class="form-group">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="lightInterface" value="light" checked>
+                <input 
+                    class="form-check-input" 
+                    type="radio" 
+                    name="interfaceStyle" 
+                    id="lightInterface" 
+                    value="light" 
+                    [(ngModel)]="userSettings.interfaceStyles" 
+                    checked>
                 <label class="form-check-label" for="lightInterface">
                     Light
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="mediumInterface" value="medium">
+                <input 
+                    class="form-check-input" 
+                    type="radio" 
+                    name="interfaceStyle" 
+                    id="mediumInterface" 
+                    value="medium" 
+                    [(ngModel)]="userSettings.interfaceStyle">
                 <label class="form-check-label" for="mediumInterface">
                     Medium
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="darkInterface" value="dark">
+                <input 
+                    class="form-check-input" 
+                    type="radio" 
+                    name="interfaceStyle" 
+                    id="darkInterface" 
+                    value="dark" 
+                    [(ngModel)]="userSettings.interfaceStyle">
                 <label class="form-check-label" for="mediumInterface">
                     Dark
                 </label>
@@ -38,7 +66,11 @@
         
         <div class="form-group">
             <label for="subscriptionType">Subscription Type</label>
-            <select class="form-control" id="subscriptionType">
+            <select 
+                class="form-control" 
+                id="subscriptionType" 
+                name="subscriptionType" 
+                [(ngModel)]="userSettings.subscriptionType">
                 <option>Monthly</option>
                 <option>Annual</option>
                 <option>Lifetime</option>
@@ -47,7 +79,12 @@
 
         <div class="form-group">
             <lable for="notes">Notes</lable>
-            <textarea id="notes" name="notes" class="form-control" rows="3"></textarea>
+            <textarea 
+                id="notes" 
+                name="notes" 
+                class="form-control" 
+                rows="3" 
+                [(ngModel)]="userSettings.notes"></textarea>
         </div>
 
         <button class="btn btn-primary">Send</button>
